Home page and about page by sudip

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -1,6 +1,6 @@
 {
   "current": {
-    "logo": "shopify:\/\/shop_images\/Maiva_final_logo_320x180_Dark_blue.png",
+    "logo": "shopify:\/\/shop_images\/Layer_1.png",
     "logo_width": 90,
     "favicon": "shopify:\/\/shop_images\/Favicon_32x32_d8a49b92-9a53-40ac-922a-52fcce3df34a.png",
     "type_header_font": "inter_n4",
